# JvmHookFramework

./: .gitignore  README-zh.md  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml
.scripts/: build.sh  setup_docker.sh
api/: build.gradle
api/src/main/java/io/github/karlatemp/jvmhook/: JvmHookFramework.java  JvmLowLevelAccess.java  package-info.java
api/src/main/java/io/github/karlatemp/jvmhook/call/: Arguments.java  JvmValue.java  MethodCall.java  MethodHook.java  MethodInfo.java  MethodReturnValue.java
ci-release-helper/: build.gradle
ci-release-helper/src/main/java/ci/: RunCi.java
core/: build.gradle
core/src/main/java/io/github/karlatemp/jvmhook/core/: ArgumentsNative.java  Bootstrap.java  ForceEarlyReturnNative.java  JvmReturnValueImpl.java  LowLevelAccess.java  (+3 more)
extension/: build.gradle
exts/: .gitignore  README.md  template.build.gradle
native/: CMakeLists.txt
native/includes/jni/unix/: jni_md.h
native/src/: ArgumentNative.cpp  CallParameter.cpp  CallParameter.h  ChangeLookupOwner.cpp  ClassHooks.cpp  ClassHooks.h  ExtNativeBridge.cpp  ForceEarlyReturnNative.cpp  JvmHookFrameworkBridge.cpp  JvmReturnValueImpl.cpp  LowLevelAccess.cpp  MethodInfoImpl.cpp  lib.cpp  lib.h  utils.cpp  utils.h
pack-release/: build.gradle
testunit/: build.gradle
testunit/run/src/main/java/mwcs/: Server.java  ServerImpl.java
testunit/run/src/main/java/tui/: TestRun.java
testunit/src/main/java/iovs/: Tst.java
testunit/src/main/java/teunit/ext/: Ext.java  HookServerRun.java
testunit/src/main/resources/: jvm-hook-ext.txt
(+5 files in other folders)
